# Sagittarius-2024-Horoscope-Chatbot-with-RAG-Architecture

./: Makefile  README.md  pyproject.toml
data/raw/: horoscope.txt
src/: main.py  streamlit.py  streamlit_chat.py
