[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sagittarius_2024_horoscope_chatbot_with_rag_architecture"
version = "0.0.1"
description = "Building a chatbot that offers horoscope predictions for individuals born under the Sagittarius sign in 2024. By focusing on a specific subject area, the chatbot can provide more accurate and relevant responses compared to generic chatbots."
authors = [
  { name = "Hesham" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["sagittarius_2024_horoscope_chatbot_with_rag_architecture"]
include = ["pyproject.toml", "sagittarius_2024_horoscope_chatbot_with_rag_architecture/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sagittarius_2024_horoscope_chatbot_with_rag_architecture"]
force-sort-within-sections = true

